gitops/platform/whoami/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`whoami.bierineenweek.nl`)
      services:
        - kind: Service
          name: whoami
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-wiredoor
  namespace: default
spec:
  entryPoints:
    - webwiredoor
  routes:
    - kind: Rule
      match: Host(`whoami.bierineenweek.nl`)
      services:
        - kind: Service
          name: whoami
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wiredoor-validation
  namespace: default
spec:
  entryPoints:
    - webwiredoor
  routes:
    - kind: Rule
      match: PathPrefix(`/`)
      services:
        - kind: Service
          name: whoami
          port: 80
